# mlit_manager

./: .gitignore  README.md  poetry_pyproject.toml  pyproject.toml
src/: base_class.py  data_filter.py  main.py  scrayper.py  selector.py  web_catalog.py  web_process.py
src/utils/: downloader.py  jp_year_converter.py  logger_config.py
